--- a/reject.ipynb
+++ b/reject.ipynb
@@ -66,12 +66,17 @@
     "        ]\n",
     "        problem = cvx.Problem(cvx.Minimize(loss), constraints)\n",
     "        result = problem.solve()\n",
+    "        \n",
+    "        if problem.status != cvx.OPTIMAL:\n",
+    "            raise RuntimeError('RejectSVM not solved. Status: {}'.format(problem.status))\n",
     "\n",
     "        self.w = np.asarray(w.value)\n",
     "        self.b = b.value\n",
     "        self.xi = np.asarray(xi.value)\n",
     "        self.gamma = np.asarray(gamma.value)\n",
     "        self.loss = loss.value\n",
+    "        \n",
+    "        print(self)\n",
     "\n",
     "        return result\n",
     "\n",
@@ -109,12 +114,17 @@
     "        ]\n",
     "        problem = cvx.Problem(cvx.Minimize(loss), constraints)\n",
     "        result = problem.solve()\n",
+    "        \n",
+    "        if problem.status != cvx.OPTIMAL:\n",
+    "            raise RuntimeError('Min Rel not solved. Status: {}'.format(problem.status))\n",
     "\n",
     "        self.w = np.asarray(w.value)\n",
     "        self.b = b.value\n",
     "        self.xi = np.asarray(xi.value)\n",
     "        self.gamma = np.asarray(gamma.value)\n",
     "        self.loss = loss.value\n",
+    "        \n",
+    "        print(self)\n",
     "\n",
     "        return result\n",
     "\n",
@@ -152,12 +162,17 @@
     "        ]\n",
     "        problem = cvx.Problem(cvx.Maximize(loss), constraints)\n",
     "        result = problem.solve()\n",
+    "        \n",
+    "        if problem.status != cvx.OPTIMAL:\n",
+    "            raise RuntimeError('Max Rel Pos not solved. Status: {}'.format(problem.status))\n",
     "\n",
     "        self.w = np.asarray(w.value)\n",
     "        self.b = b.value\n",
     "        self.xi = np.asarray(xi.value)\n",
     "        self.gamma = np.asarray(gamma.value)\n",
     "        self.loss = loss.value\n",
+    "        \n",
+    "        print(self)\n",
     "\n",
     "        return result\n",
     "\n",
@@ -195,12 +210,17 @@
     "        ]\n",
     "        problem = cvx.Problem(cvx.Maximize(loss), constraints)\n",
     "        result = problem.solve()\n",
+    "        \n",
+    "        if problem.status != cvx.OPTIMAL:\n",
+    "            raise RuntimeError('Max Rel Neg not solved. Status: {}'.format(problem.status))\n",
     "\n",
     "        self.w = np.asarray(w.value)\n",
     "        self.b = b.value\n",
     "        self.xi = np.asarray(xi.value)\n",
     "        self.gamma = np.asarray(gamma.value)\n",
     "        self.loss = loss.value\n",
+    "        \n",
+    "        print(self)\n",
     "\n",
     "        return result\n",
     "\n",
@@ -213,7 +233,7 @@
     "    return x_hyperplane, y_hyperplane\n",
     "\n",
     "\n",
-    "def visualize(x, y, d=0.5, j=0):\n",
+    "def visualize(x, y, d=0.4, j=0):\n",
     "    fig = plt.figure()\n",
     "\n",
     "    svm = RejectSVM(d)\n",
