--- a/reject.ipynb
+++ b/reject.ipynb
@@ -18,6 +18,7 @@
     "\n",
     "import functools\n",
     "\n",
+    "EPS = 1.0\n",
     "\n",
     "@functools.total_ordering\n",
     "class Classifier:\n",
@@ -110,7 +111,7 @@
     "            gamma >= -cvx.mul_elemwise(y, x * w + b),\n",
     "            cvx.norm(w, p=1) <= np.linalg.norm(self.w, ord=1),\n",
     "            cvx.sum_entries(xi + (1 - 2 * d) / d * gamma) <=\n",
-    "            np.sum(self.xi + (1 - 2 * d) / d * self.gamma)\n",
+    "            np.sum(self.xi + (1 - 2 * d) / d * self.gamma) * EPS\n",
     "        ]\n",
     "        problem = cvx.Problem(cvx.Minimize(loss), constraints)\n",
     "        result = problem.solve()\n",
@@ -158,7 +159,7 @@
     "            gamma >= -cvx.mul_elemwise(y, x * w + b),\n",
     "            cvx.norm(w, p=1) <= np.linalg.norm(self.w, ord=1),\n",
     "            cvx.sum_entries(xi + (1 - 2 * d) / d * gamma) <=\n",
-    "            np.sum(self.xi + (1 - 2 * d) / d * self.gamma)\n",
+    "            np.sum(self.xi + (1 - 2 * d) / d * self.gamma) * EPS\n",
     "        ]\n",
     "        problem = cvx.Problem(cvx.Maximize(loss), constraints)\n",
     "        result = problem.solve()\n",
@@ -206,7 +207,7 @@
     "            gamma >= -cvx.mul_elemwise(y, x * w + b),\n",
     "            cvx.norm(w, p=1) <= np.linalg.norm(self.w, ord=1),\n",
     "            cvx.sum_entries(xi + (1 - 2 * d) / d * gamma) <=\n",
-    "            np.sum(self.xi + (1 - 2 * d) / d * self.gamma)\n",
+    "            np.sum(self.xi + (1 - 2 * d) / d * self.gamma) * EPS\n",
     "        ]\n",
     "        problem = cvx.Problem(cvx.Maximize(loss), constraints)\n",
     "        result = problem.solve()\n",
@@ -226,78 +227,45 @@
     "\n",
     "\n",
     "def calculate_hyperplane(w, b, lim):\n",
-    "    x_hyperplane = np.linspace(lim[0], lim[1])\n",
-    "    if w[1] < 1e-4:\n",
+    "    w = np.copy(w)\n",
+    "    x_hyperplane = np.array(lim)\n",
+    "    if abs(w[1]) < 1e-4:\n",
     "        w[1] = 1e-4\n",
-    "    y_hyperplane = (b - w[0] * x_hyperplane) / w[1]\n",
+    "    y_hyperplane = (-b - w[0] * x_hyperplane) / w[1]\n",
     "    return x_hyperplane, y_hyperplane\n",
     "\n",
     "\n",
+    "def classify_and_plot(classifier, title, x, y, ax):\n",
+    "    classifier.fit(x, y)\n",
+    "    y_est = classifier.classify(x)\n",
+    "    ax.set_title(title)\n",
+    "    ax.scatter(x[:, 0], x[:, 1], c=y_est)\n",
+    "    ax.set_aspect('equal')\n",
+    "    x_lim = ax.get_xlim()\n",
+    "    y_lim = ax.get_ylim()\n",
+    "    x_hyp, y_hyp = calculate_hyperplane(classifier.w, classifier.b, x_lim)\n",
+    "    ax.plot(x_hyp, y_hyp)\n",
+    "    ax.set_xlim(x_lim)\n",
+    "    ax.set_ylim(y_lim)\n",
+    "    \n",
     "def visualize(x, y, d=0.4, j=0):\n",
     "    fig = plt.figure()\n",
-    "\n",
+    "    \n",
     "    svm = RejectSVM(d)\n",
-    "    svm.fit(x, y)\n",
-    "    y_est = svm.classify(x)\n",
-    "\n",
     "    ax = fig.add_subplot(221)\n",
-    "    ax.set_title('Reject SVM')\n",
-    "    ax.scatter(x[:, 0], x[:, 1], c=y_est)\n",
-    "    ax.set_aspect('equal')\n",
-    "    x_lim = ax.get_xlim()\n",
-    "    y_lim = ax.get_ylim()\n",
-    "    x_hyp, y_hyp = calculate_hyperplane(svm.w, svm.b, x_lim)\n",
-    "    ax.plot(x_hyp, y_hyp)\n",
-    "    ax.set_xlim(x_lim)\n",
-    "    ax.set_ylim(y_lim)\n",
+    "    classify_and_plot(svm, 'Reject SVM', x, y, ax)\n",
     "\n",
     "    min_rel = MinRel(d, svm.w, svm.xi, svm.gamma, j)\n",
-    "    min_rel.fit(x, y)\n",
-    "\n",
-    "    y_est = min_rel.classify(x)\n",
-    "\n",
     "    ax = fig.add_subplot(222)\n",
-    "    ax.set_title('Min Rel')\n",
-    "    ax.scatter(x[:, 0], x[:, 1], c=y_est)\n",
-    "    ax.set_aspect('equal')\n",
-    "    x_lim = ax.get_xlim()\n",
-    "    y_lim = ax.get_ylim()\n",
-    "    x_hyp, y_hyp = calculate_hyperplane(min_rel.w, min_rel.b, x_lim)\n",
-    "    ax.plot(x_hyp, y_hyp)\n",
-    "    ax.set_xlim(x_lim)\n",
-    "    ax.set_ylim(y_lim)\n",
-    "\n",
+    "    classify_and_plot(min_rel, 'Min Rel', x, y, ax)\n",
+    "    \n",
     "    max_rel_pos = MaxRelPos(d, svm.w, svm.xi, svm.gamma, j)\n",
-    "    max_rel_pos.fit(x, y)\n",
-    "\n",
-    "    y_est = max_rel_pos.classify(x)\n",
-    "\n",
     "    ax = fig.add_subplot(223)\n",
-    "    ax.set_title('Max Rel Pos')\n",
-    "    ax.scatter(x[:, 0], x[:, 1], c=y_est)\n",
-    "    ax.set_aspect('equal')\n",
-    "    x_lim = ax.get_xlim()\n",
-    "    y_lim = ax.get_ylim()\n",
-    "    x_hyp, y_hyp = calculate_hyperplane(max_rel_pos.w, max_rel_pos.b, x_lim)\n",
-    "    ax.plot(x_hyp, y_hyp)\n",
-    "    ax.set_xlim(x_lim)\n",
-    "    ax.set_ylim(y_lim)\n",
-    "\n",
+    "    classify_and_plot(max_rel_pos, 'Max Rel Pos', x, y, ax)\n",
+    "    \n",
     "    max_rel_neg = MaxRelNeg(d, svm.w, svm.xi, svm.gamma, j)\n",
-    "    max_rel_neg.fit(x, y)\n",
-    "\n",
-    "    y_est = max_rel_neg.classify(x)\n",
-    "\n",
     "    ax = fig.add_subplot(224)\n",
-    "    ax.set_title('Max Rel Neg')\n",
-    "    ax.scatter(x[:, 0], x[:, 1], c=y_est)\n",
-    "    ax.set_aspect('equal')\n",
-    "    x_lim = ax.get_xlim()\n",
-    "    y_lim = ax.get_ylim()\n",
-    "    x_hyp, y_hyp = calculate_hyperplane(max_rel_neg.w, max_rel_neg.b, x_lim)\n",
-    "    ax.plot(x_hyp, y_hyp)\n",
-    "    ax.set_xlim(x_lim)\n",
-    "    ax.set_ylim(y_lim)\n",
+    "    classify_and_plot(max_rel_neg, 'Max Rel Neg', x, y, ax)\n",
     "\n",
     "    print('Winner:', 'Max Rel Pos'\n",
     "          if max_rel_pos > max_rel_neg else 'Max Rel Neg')"
@@ -316,7 +284,7 @@
     "num_samples = 1000\n",
     "num_features = 2\n",
     "w_true = np.random.randn(num_features, 1)\n",
-    "b_true = 0\n",
+    "b_true = 10\n",
     "x = np.random.normal(0, 5, size=(num_samples, num_features))\n",
     "y = np.sign(x.dot(w_true) + b_true + np.random.normal(0, 1, size=(num_samples, 1)))\n",
     "\n",
