--- a/reject.ipynb
+++ b/reject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
     "\n",
     "import functools\n",
     "\n",
-    "EPS = 1.0\n",
+    "EPS = 1.1\n",
     "\n",
     "@functools.total_ordering\n",
     "class Classifier:\n",
@@ -281,14 +281,15 @@
    },
    "outputs": [],
    "source": [
-    "num_samples = 1000\n",
-    "num_features = 2\n",
-    "w_true = np.random.randn(num_features, 1)\n",
-    "b_true = 10\n",
-    "x = np.random.normal(0, 5, size=(num_samples, num_features))\n",
-    "y = np.sign(x.dot(w_true) + b_true + np.random.normal(0, 1, size=(num_samples, 1)))\n",
+    "def test():\n",
+    "    num_samples = 1000\n",
+    "    num_features = 2\n",
+    "    w_true = np.random.randn(num_features, 1)\n",
+    "    b_true = 0\n",
+    "    x = np.random.normal(0, 5, size=(num_samples, num_features))\n",
+    "    y = np.sign(x.dot(w_true) + b_true + np.random.normal(0, 1, size=(num_samples, 1)))\n",
     "\n",
-    "visualize(x, y)"
+    "    visualize(x, y)"
    ]
   },
   {
@@ -299,15 +300,161 @@
    },
    "outputs": [],
    "source": [
-    "num_samples = 1000\n",
-    "num_features = 2\n",
-    "w_true = np.random.randn(num_features, 1)\n",
-    "b_true = 0\n",
-    "x = np.random.normal(0, 5, size=(num_samples, 1))\n",
-    "x = np.concatenate((x, x), axis=1)\n",
-    "y = np.sign(x.dot(w_true) + b_true + np.random.normal(0, 1, size=(num_samples, 1)))\n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def test():\n",
+    "    num_samples = 1000\n",
+    "    num_features = 2\n",
+    "    w_true = np.random.randn(num_features, 1)\n",
+    "    b_true = 0\n",
+    "    x = np.random.normal(0, 5, size=(num_samples, 1))\n",
+    "    x = np.concatenate((x, x), axis=1)\n",
+    "    y = np.sign(x.dot(w_true) + b_true + np.random.normal(0, 1, size=(num_samples, 1)))\n",
     "\n",
-    "visualize(x, y)"
+    "    visualize(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def test():\n",
+    "    num_samples = 1000\n",
+    "    num_features = 2\n",
+    "    w_true = np.random.randn(num_features, 1)\n",
+    "    b_true = 0\n",
+    "    x = np.random.normal(0, 5, size=(num_samples, num_features))\n",
+    "    y = np.sign(x.dot(w_true) + b_true + np.random.normal(0, 1, size=(num_samples, 1)))\n",
+    "\n",
+    "    visualize(x, y)"
    ]
   }
  ],
